kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greet-me
  namespace: apps
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: greet-me
